crates/cli/tests/snapshots/update__update_check_json_reports_app_and_managed_resource_updates.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "{\"app\":{\"status\":\"update_available\",\"current_version\":\"0.1.0\",\"latest_version\":\"0.2.0\",\"platform\":\"darwin-arm64\",\"asset\":{\"url\":\"https://downloads.example.test/pv/0.2.0/pv-darwin-arm64\",\"sha256\":\"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\",\"size\":12345678},\"reason\":null},\"managed_resources\":[{\"status\":\"update_available\",\"resource\":\"redis\",\"track\":\"8.8\",\"current_artifact_version\":\"8.8.0-pv1\",\"current_artifact_path\":\"<pv-home>/resources/redis/8.8/releases/8.8.0-pv1\",\"latest_artifact_version\":\"8.8.1-pv1\",\"current_revocation\":null,\"latest_revocation\":null,\"blocked_by\":null,\"reason\":null}]}\n",
    stderr: "",
}
