crates/cli/tests/snapshots/update__update_check_reports_daemon_rejected.snap
---
source: crates/cli/tests/update.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: pv update --check failed: update in progress\n",
}
