crates/cli/tests/snapshots/update__update_check_reports_missing_daemon_before_fetching_manifests.snap
---
source: crates/cli/tests/update.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: pv update --check requires the PV daemon; run `pv daemon:restart` or `pv setup`\n",
}
