crates/cli/tests/snapshots/update__update_without_check_is_deferred_without_mutating.snap
---
source: crates/cli/tests/update.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: pv update is not implemented yet; run pv update --check to preview available updates\n",
}
